# haskoin

./: README.md  haskoin.cabal
app/: Main.hs
src/Haskoin/: Mining.hs  Serialization.hs  Types.hs
test/Haskoin/: MiningSpec.hs  SerializationSpec.hs
