name:                haskoin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/batou99/haskoin#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskoin.Types
                     , Haskoin.Serialization
  build-depends:       base >= 4.7 && < 5
                     , cryptonite
                     , binary
                     , bytestring
                     , memory
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable haskoin
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskoin
                     , cryptonite
                     , pretty-simple
                     , bytestring
  default-language:    Haskell2010

test-suite haskoin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  exposed-modules:     Haskoin.SerializationSpec
  main-is:             Spec.hs
  build-depends:       base
                     , haskoin
                     , hspec
                     , QuickCheck
                     , base16-bytestring
                     , cryptonite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/batou99/haskoin
